overflow fix

--- a/components/modules/BigQuote/BigQuote.module.scss
+++ b/components/modules/BigQuote/BigQuote.module.scss
@@ -2,6 +2,7 @@
 
 .root {
   position: relative;
+  overflow: hidden;
 
   :global(.swiper) {
     overflow: visible;
